Grammar issues within HTML file are corrected.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-au">
+<html lang="en-AU">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p>View our suggestions below: </p>
+    <p>View our recipe suggestions below: </p>
     <ul>
         <li><a href="pancakes.html">Breakfast</a></li>
         <li><a href="stirfry.html">Lunch</a></li>
