--- a/stirfry.html
+++ b/stirfry.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-au">
+<html lang="en-AU">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
     </nav>
 
     <h1>Stirfry</h1>
-    <img src="https://shorturl.at/SOgP8" alt="">
+    <img src="https://shorturl.at/SOgP8" alt="A plate of delicious beef stirfry that is quick to make and nutritious to eat, any time of the day.">
 
     <h2>Description: </h2>
     <p>This dish is packed with veggies, beef, and saucy flavors for a weeknight dinner warrior that checks all the boxes.
